PyMaker/datas/object2/RawHTML/i3501/Python_DOC_referPages.python-def-syntax-error-with-in-file-name.txt
<div class="post-text" itemprop="text">
<p>In my Visual Code Studio running python3.6 - my code is saved as <code>"Langemead12Test.py" w/ lines</code> as: </p>
<blockquote>
<p>!C:\Users\Bones\Anaconda3\python.exe
  [1]def readFastq(SRR835775_1.first1000.fastq)</p>
<p>Red Error underline def [pylint] E0001:invalid syntax (, line 3).</p>
</blockquote>
<p>In Anaconda command prompt running python3.6:</p>
<blockquote>
<p>File "Langmead12Test.py", line 3
      def readFastq(SRR835775_1.first1000.fastq)
                               ^
  SyntaxError: invalid syntax</p>
</blockquote>
<p>Question(s): I'm a total newb here but I can't seem to understand why VCS throws an error under def and my anaconda command line prompt throws error at the . within the fastq filename. Are these independent errors or different representations of the same error? All thoughts and hints are welcome. </p>
<p>Background: I am attempting to execute exercise in ADS1: Practical: Working with sequencing reads. Ben Langmead's Youtube class on reading fastq files (<code>filename = SRR835775_1.first1000.fastq</code>). </p>
</div>
<div class="post-text" itemprop="text">
<p>You have 2 syntax error in one line:</p>
<p>1.Missing "" or this '' before and after your string</p>
<p>2.You forget to put ":" and the end of the line: 
Correct syntax:</p>
<pre><code>def readFastq(filename="SRR835775_1.first1000.fastq"):
</code></pre>
<p>Read this carefully please:</p>
<p><a href="https://docs.python.org/3/tutorial/introduction.html#strings" rel="nofollow noreferrer">https://docs.python.org/3/tutorial/introduction.html#strings</a></p>
<p><a href="https://docs.python.org/3/tutorial/controlflow.html#defining-functions" rel="nofollow noreferrer">https://docs.python.org/3/tutorial/controlflow.html#defining-functions</a></p>
<p>And after that read and learn everything from there:</p>
<p><a href="https://docs.python.org/3/tutorial/index.html" rel="nofollow noreferrer">https://docs.python.org/3/tutorial/index.html</a></p>
</div>
<span class="comment-copy">You probably want quotes around <code>SRR835775_1.first1000.fastq</code>, and they're probably the same error.</span>
<span class="comment-copy">Can you provide a minimal example of the code? It looks like you are trying to define a function. The function's parameters are simple names, no dots. I can't say whether that's the only error without a view of the code.</span>
<span class="comment-copy">if you still getting error pls post your code as asked before</span>
<span class="comment-copy">Thank you for your reply; in the tutorial I was attempting to replicate the user is in Jupyter notebook and doesn't use quotes or : I gather this Jupyter has some way of departing form normal syntax?</span>
<span class="comment-copy">Here is the new error from Anaconda Prompt File                    "Langmead12Test.py", line 3     def readFastq('SRR835775_1.first1000.fastq'):                                                                            ^ SyntaxError: invalid syntax</span>
<span class="comment-copy">My bad i made a mistake edited the code in my answer test it now. because you still not posted the actual code which reads the file in your function i guessing the argument name is filename in your function :)  if not change it accordingly</span>
<span class="comment-copy">I dont know I never used Jupyter nor Anaconda But thats what Jupyter.org says so it should work:"When executing code in IPython, all valid Python syntax works as-is" so try update the code from my edited answer and see if it works</span>
